--- a/aip.tex
+++ b/aip.tex
@@ -89,7 +89,7 @@ An inequality between points of $\RR^n$ is a shorthand for a system of $n$ coord
 In the same vein, operations on numbers are extended to points in $\RR^n$ in a coordinatewise fashion; for instance, $\up{\vv{u}}=(\up{u_1},\ldots,\up{u_n})$.
 
 We say that a point $\vv{u}\in \RR^n$ is positive (respectively, nonnegative) if $\vv{u} > \vv{0}$ (respectively, $\vv{u}\ge \vv{0}$).
-More generally, given a point $\vv{u}$ in a coordinate subspace $\mathcal{S}$ of $\RR^n$, we say that $\vv{u}$ is \emph{positive in $\mathcal{S}$} (respectively, \emph{nonnegative in $\mathcal{S}$}) if $\vv{u}$ is a positive (respectively, nonegative) linear combination of the standard basis vectors that span $\mathcal{S}$.
+More generally, given a point $\vv{u}$ in a coordinate subspace $\mathcal{S}$ of $\RR^n$, we say that $\vv{u}$ is \emph{positive in $\mathcal{S}$} (respectively, \emph{nonnegative in $\mathcal{S}$}) if $\vv{u}$ is a positive (respectively, nonnegative) linear combination of the standard basis vectors that span $\mathcal{S}$.
 
 Turning to concepts and constructions of convex geometry, a (convex) \emph{polyhedron} in $\RR^n$ is a subset of $\RR^n$ obtained by intersecting finitely many closed halfspaces or, equivalently, a set consisting of all points $\vv{x}\in \RR^n$ satisfying an inequality of the form $A\vv{x}\le \vv{b}$, where $A$ is a matrix with $n$ columns.
 
@@ -668,7 +668,7 @@ In view of the Minkowski--Weyl Theorem (see \Cref{ss: euclidean spaces and conve
 
 \begin{definition}  
 \label{collapse: D}
- Suppose that $\O$ is a proper face of the Newton polyhedron $\N$ in $\RR^d$ of a monomial matrix $A$ with $d$ rows.  
+ Suppose that $\O$ is a proper face of the Newton polyhedron $\N$ of a monomial matrix $A$ with $d$ rows.  
 
 \begin{enumerate}
    \item The set $\rb(\O)^{\perp}$ is the complement of $\rb(\O)$ in $\{ \canvec_1, \ldots, \canvec_d \}$, and $\rs(\O)^\perp$ is the subspace of $\RR^d$ spanned by $\rb(\O)^\perp$, that is, the orthogonal complement of $\rs(\O)$ in $\RR^d$.
