--- a/aip.tex
+++ b/aip.tex
@@ -386,7 +386,7 @@ In what follows, we fix a monomial pair $(A,\vv{u})$, where $A$ is a $d\times n$
    Given a positive integer $q$, the integer program $\IP(A, \vv{u}, q)$ in the domain lattice of $A$ consists of maximizing the function $\vv{k} \mapsto \norm{\vv{k}}$ subject to the constraints $\vv{k} \geq \vv{0}$ and $A \vv{k} < \vv{u}q$. 
 \end{definition}
 
-It is easy \daniel{This is true because we only look at monomial pairs.  Should we emphasize this?} to see that the feasible set of the integer program $\IP(A,\vv{u},q)$ is finite, and consequently this program has a well-defined value.
+It is easy to deduce from the fact that $A$ has nonnegative, nonzero rows that the feasible set of the integer program $\IP(A,\vv{u},q)$ is finite, and consequently this program has a well-defined value.
 In the algebraic context established above, $\val \IP(A,\vv{u},q)$ equals $\nu(\ideala,\ideald,q)$, which we shall often denote $\nu(A,\vv{u},q)$.
 
 \begin{definition}
@@ -434,23 +434,22 @@ In order to relate this value to the Newton polyhedron of $A$ we need the follow
    \end{enumerate}
 \end{proposition}
 
-\pedro[inline]{
-   Do we really need \eqref{ip} and  \eqref{min ip}?
-   Maybe all we need is:
-   \begin{quote}
-      \emph{The inner product $\iprod{\vv{c}}{\vv{u}}$, where $\vv{c} \in \RR^d$ is a point defining the minimal face $\mf(A, \vv{u})$ in $\N$.}
-   \end{quote}   
-   \daniel[inline]{I could have sworn that we needed the more general versions somewhere, but it looks like I am wrong.  Let's just go with the simpler statement, and revert back later if we realize we need to.}
-   \pedro[inline]{I went ahead and made the change.}
-   
-   }
+% \pedro[inline]{
+%    Do we really need \eqref{ip} and  \eqref{min ip}?
+%    Maybe all we need is:
+%    \begin{quote}
+%       \emph{The inner product $\iprod{\vv{c}}{\vv{u}}$, where $\vv{c} \in \RR^d$ is a point defining the minimal face $\mf(A, \vv{u})$ in $\N$.}
+%    \end{quote}   
+%    \daniel[inline]{I could have sworn that we needed the more general versions somewhere, but it looks like I am wrong.  Let's just go with the simpler statement, and revert back later if we realize we need to.}
+%    \pedro[inline]{I went ahead and made the change.}
+%   }
 This proposition and \eqref{eq: limit} suggest the following definition.
 
 \begin{definition}
    The \emph{$F$-threshold} of a monomial pair $(A, \vv{u})$, denoted $\ft{A}{\vv{u}}$, is the number described in \Cref{FT descriptions: P}. 
 \end{definition}
 
-In the algebraic context established above, $\ft{A}{\vv{u}}$ is the $F$-threshold of $\ideala$ with respect to the diagonal ideal $\ideald = \diag(\vv{u})$.
+Algebraically, $\ft{A}{\vv{u}}$ is the $F$-threshold of $\ideala$ with respect to the diagonal ideal $\ideald = \diag(\vv{u})$.
 
 \begin{proof}[Proof of \Cref{FT descriptions: P}]
    \ \todo[inline]{Show that $(1) = (2)$\emily[inline]{I'm working on this.}}
