--- a/aip.tex
+++ b/aip.tex
@@ -7,7 +7,7 @@
 
 \begin{document}
 
-\title[Fractal and arithmetic programs]{Fractal and arithmetic programs, and the Frobenius powers of monomial ideals}
+\title[Fractal and arithmetic programs]{Fractal programs, arithmetic programs, and the Frobenius powers of monomial ideals}
 \author{Daniel J.~Hern\'andez}
 \author{Pedro Teixeira}
 \author{Emily E.~Witt}
