--- a/preamble.tex
+++ b/preamble.tex
@@ -53,7 +53,7 @@
 \newtheorem{remark}[theorem]{Remark}
 \newtheorem{notation}[theorem]{Notation}
 \newtheorem{convention}[theorem]{Convention}
-
+\newtheorem{problem}[theorem]{Problem}
 
 %numbering
 \numberwithin{equation}{section} %Can replace {subsection} with {theorem} if you want
