--- a/aip.tex
+++ b/aip.tex
@@ -1,5 +1,6 @@
 \documentclass[11pt]{amsart}
 \input{preamble.tex}
+\usepackage{caption}
 \usepackage{subcaption}
 \captionsetup[subfigure]{subrefformat=simple,labelformat=simple}
 \renewcommand\thesubfigure{(\sc \alph{subfigure})}
@@ -407,7 +408,7 @@ Given a monomial ideal $\ideala$ of $\QQ[x_1, \cdots, x_d]$, there exists a posi
 \end{theorem}
 
 \newpage
-\section{Frobenius and optimization}
+\section{Connections with optimization}
 \label{sec: LPs}
 
 Consider a proper monomial ideal
@@ -487,7 +488,9 @@ Once again, the fact that $A$ is monomial implies that the feasible set of the l
 %In order to relate this value to the Newton polyhedron of $A$ we need the following definition.
 
 
-\begin{proposition}  The value of $\LP(A, \vv{u})$ equals the $F$-threshold $\ft{\ideala}{\ideald}$.
+\begin{proposition}
+\label{ft as val LP: P}
+The value of $\LP(A, \vv{u})$ equals the $F$-threshold $\ft{\ideala}{\ideald}$.
 \end{proposition}
 
 \begin{proof}
@@ -555,34 +558,34 @@ The identity in \eqref{mu as program value: eq} implies that
 %
 In what follows, we relate these quantities to a variant of a linear program we call a \emph{fractal linear program}.  To do so, we require the following concept.
 
-
-\daniel[inline]{To minimize notation, I changed ``in $\RRnn^n$'' to ``of dimension $n$" .  This won't come up outside of this section anymore, so I hope this is OK}
-
 \begin{definition}
 \label{sierpinski: D}
-   The \emph{Sierpi\'nski $p$-gasket of dimension $n$} is the set $\sierp_{p,n}$ consisting of all points $\vv{t}\in \RR^n$ for which there exist a natural number $s$, and sequence of points $\{ \vv{t}_e \}_{e=1}^\infty$ in $\NN^n$ and such that $\norm{\vv{t}_e} < p$ for all $e \geq 1$, and
+   The \emph{Sierpi\'nski $p$-gasket of dimension $n$} is the set $\sierp_{p,n}$ consisting of all points $\vv{t}\in \RR^n$ for which there exist $s \in \ZZ$, and sequence of points $\{ \vv{t}_e \}_{e=s}^\infty$ in $\NN^n$ and such that $\norm{\vv{t}_e} < p$ for all $e \geq s$, and
  \[
-\vv{t} = p^s \cdot\Big(\frac{\vv{t}_1}{p} +\frac{\vv{t}_2}{p^2}+\cdots +\frac{\vv{t}_e}{p^e} + \cdots \Big).
+\vv{t} = \sum_{e=s}^{\infty} \frac{\vv{t}_e}{p^e}.
  \]
 \end{definition}
 
-We start with some preliminary observations.  If $\widehat{\sierp}_{p,n} := \sierp_{p,n} \cap [0,1]^n$, then an immediate consequence of the definition that\[ \sierp_{p,n} = \bigcup_{s=0}^{\infty} \ p^s \, \widehat{\sierp}_{p,n}. \]
+Note that the integer $s \in \ZZ$ in \Cref{sierpinski: D} can be negative.  It is also immediate that $\vv{t} \in \sierp_{p,n}$ if and only if $p^m  \vv{t} \in \sierp_{p,n}$ for some (equivalently, for every) integer $m \in \ZZ$.  In particular, when determining whether $\vv{t} \in \RR^n$ lies in $\sierp_{p,n}$, we may rescale by a power of $p$  and assume that $\vv{t} \in [0,1]^n$.
 
-Thus, when describing the basic properties of the Sierpinski $p$-gasket,  we may focus on its restriction to the unit cube.
+Recall that every point $t \in [0,1]$ either has a unique base $p$ expansion, which is necessarily non-terminating, or else $p^m t \in \NN$ for some $m \in \ZZ$, in which case $t$ can has both a terminating and non-terminating expansion.  Thus, if $\vv{t} \in [0,1]^n$ is such that no component of $p^m \vv{t}$ is an integer for each $m \in \NN$, then there is a unique sequence $\{ \vv{t}_e \}_{e=1}^{\infty}$ in $ \NN^n$ such that $\vv{t} = \sum_{e=1}^{\infty} \frac{\vv{t}_e}{p^e}$, and such point lies in ${\sierp}_{p,n}$ if and only if all $\norm{\vv{t}_e}$ are less than $p$.  However, things can be more subtle when some $p^m \vv{t}$ has an integer component.
 
-Recall for every $t \in [0,1]$ such that $p^s t \notin \NN$ for every $s \in \NN$, there exists a unique sequence $\{ t_e \}_{e=1}^{\infty}$ of integers such that $0 < t_e < p$ for all $e \geq 1$, the integer $t_e \neq 0$ is nonzero for infinitely many $e$, and $t = \sum_{e=1}^{\infty} \frac{t_e}{p^e}$. Otherwise, if $p^s t \in \NN$ for some $s \in \NN$, then $t$ has both a non-terminating base $p$ expansion, as described above, but also a terminating one.
+\begin{example}
+If $p=2$, then $(1/4, 1/4) \in \sierp_{2,2}$.  Indeed, for the first component, take the non-terminating binary expansion $\frac{1}{4} = \frac{1}{2^3} + \frac{1}{2^4} + \frac{1}{2^5} + \cdots$, and for the second component, simply take the expansion $\frac{1}{4} = \frac{1}{2^2}$.  Note that if one instead considered the non-terminating expansion for both components, or the terminating expansion for both components, then the resulting expansion of $(1/4, 1/4)$ would fail to satisfy the condition in \Cref{sierpinski: D}.
+\end{example}
 
-Thus, if $\vv{t} \in [0,1]^n$ is such that no component of $p^s \vv{t}$ is an integer for each $s \in \NN$, then there is a unique sequence $\{ \vv{t}_e \}_{e=1}^{\infty}$ in $ \NN^n$ such that $\vv{t} = \sum_{e=1}^{\infty} \frac{\vv{t}_e}{p^e}$, and such point lies in $\widehat{\sierp}_{p,n}$ if and only if $\norm{\vv{t}_e}$ is less than $p$ for all $e \geq 1$.  However, things are more subtle when some component of $p^s \vv{t}$ is an integer.
+This description of the Sierpi\'nski $p$-gasket in terms of expansions is not hard to translate geometrically into its description as a fractal.
 
-For instance, if $p=2$, then $(1/4, 1/4) \in \sierp_{2,2}$.  Indeed, for the first component, take the binary expansion $\frac{1}{4} = \frac{1}{2^3} + \frac{1}{2^4} + \frac{1}{2^5} + \cdots$, and for the second component, simply take the binary expansion $\frac{1}{4} = \frac{1}{2^2}$.  Note that if one instead considered the non-terminating expansion for both components, or the terminating expansion for both components, then the resulting expansion of $(1/4, 1/4)$ would fail to satisfy the condition in \Cref{sierpinski: D}.
+\begin{example}
+\label{sierpinski triangle: E}
 
-This description of the Sierpi\'nski $p$-gasket in terms of expansions is not hard to translate geometrically into its geometric description as a fractal.
-For instance, the points of $\sierp_{2,2}$ in $[0,1]^2$ form the familiar Sierpi\'nski triangle:
-The points $\vv{t}$ in the unit square that have \emph{no} expansion $\vv{t} = \frac{\vv{t}_1}{2} +\frac{\vv{t}_2}{2^2}+\cdots +\frac{\vv{t}_e}{2^e} + \cdots$ for which all $\vv{t}_e \in \NN^2$, and $\norm{\vv{t}_1} < 2$ are precisely the points $(x,y) \in [0,1]^2$ lying above the line $x+y=1$, so we remove the triangle given by $x+y>1$.
-At the next stage, the points with no expansion satisfying $\norm{\vv{t}_1} < 2$ and  $\norm{\vv{t}_2} < 2$ are those in the triangle given by $x, y < \frac{1}{2}$ and $x+y > \frac{1}{2}$.
-The condition on expansions at the third place removes three triangles from the remaining set, and we can continue on analogously.
+The set $\sierp_{2,2} \cap [0,1]^2$ is the familiar Sierpi\'nski triangle.  Indeed, the points $\vv{t} \in [0,1]^2$ that have \emph{no} expansion $\vv{t} = \sum_{e=0}^{\infty}\frac{\vv{t}_e}{2^e}$ with $\norm{\vv{t}_1} < 2$ are precisely the points in the open triangle  \[ T = \{ (a,b) \in \RR^2 : a,b < 1, a+b > 1 \}.\]
+At the next stage, the points $\vv{t} \in [0,1]^2$ with \emph{no} expansion $\vv{t} = \sum_{e=0}^{\infty}\frac{\vv{t}_e}{2^e}$ with both  $\norm{\vv{t}_1} < 2$ and $\norm{\vv{t}_2} < 2$ are those in the union of open triangles $T$ and $\frac{1}{2} \cdot T$.  The condition on expansions at the third place removes three additional open triangles from this set, and we can continue analogously.
+\end{example}
 
-\Cref{fig: sierpinski 3-gasket} illustrates the self-similarity of the Sierpi\'nski $3$-gasket in $\RRnn^2$.
+
+As suggested by \Cref{sierpinski triangle: E}, each $\sierp_{p,n}$  can be realized by removing a union of open simplices from $\RR^n$, and hence, is a closed set.  \Cref{fig: sierpinski 3-gasket} illustrates the self-similarity of the $2$-dimensional Sierpi\'nski $3$-gasket.
+
 \begin{figure}
 \begin{subfigure}{.49\textwidth}
   \centering
@@ -594,61 +597,69 @@ The condition on expansions at the third place removes three triangles from the 
   \includegraphics[width=.9\linewidth]{Pictures/sierpinski3_b.pdf}
   \caption{Restriction to $[0,9]^2$}
 \end{subfigure}
-\caption{The Sierpi\'nski 3-gasket in $\RRnn^2$}
+\caption{The $2$-dimensional Sierpi\'nski 3-gasket}
 \label{fig: sierpinski 3-gasket}
 \end{figure}
-In general, notice that since each can be realized by removing a union of open sets from $\RR^n$, all $\sierp_{p,n}$ are closed sets.
 
-Remarkably, the critical exponent of a monomial pair $(A, \vv{u})$ can be computed in terms of the Sierpi\'nski $p$-gasket, providing a geometric realization of this value.
-Toward making this relation precise, consider the following optimization problem, which essentially adds the extra ``fractal'' constraint from the definition of $\sierp_{p,n}$ to
-the linear program $\LP(A, \vv{u})$, after replacing the condition $A \vv{t} \leq \vv{u}$ with $A \vv{t} < \vv{u}$.
+
+Remarkably, the critical exponent of a monomial pair $\crit(\ideala, \ideald)$ described in \eqref{ft as limit of normalized program values: eq} can be computed in terms of the Sierpi\'nski $p$-gasket, providing a geometric interpretation for this value.  To motivate our approach, we first note that the feasible set of the linear program $\LP(A, \vv{u})$, whose value equals the $F$-threshold $\ft{\ideala}{\ideald}$ by \Cref{ft as val LP: P}, is simply the closure with respect to the Euclidean topology of the set $\{ \vv{t} \in \RR^n : \vv{t} \geq \vv{0} \text{ and } A\vv{t} < \vv{u} \}$.  In what follows, we consider a similar optimization problem,  replacing the conditions that $\vv{t} \in \RR^n$ and $\vv{t} \geq \vv{0}$ with the ``fractal constraint" that $\vv{t} \in \sierp_{p,n}$.
 
 \begin{definition}
-Given a monomial pair $(A, \vv{u})$, the \emph{fractal linear program} $\fip_p(A,\vv{u})$ consists of maximizing $\vv{t}\mapsto \norm{\vv{t}}$, with $\vv{t}$ in the \emph{closure} of the set of all $\vv{t}\in \sierp_{p,n}$ satisfying $A\vv{t} < \vv{u}$.
+The \emph{fractal linear program} $\fip_p(A,\vv{u})$ consists of maximizing the linear function $\vv{t}\mapsto \norm{\vv{t}}$ on the Euclidean closure of the set \[ \{ \vv{t} \in \sierp_{p,n} : A \vv{t} < \vv{u} \}.\]  We call this closed set the feasible set of $\fip_p(A, \vv{u})$, and denote it by $\feas \fip_p(A, \vv{u})$.
 % The value of the problem, $\val \fip_p(A,\vv{u})$, is defined as the supremum of $\norm{\vv{t}}$ among all $\vv{t} \in \feas \fip_p(A, \vv{u})$.
 \end{definition}
 
 \begin{remark}
-   The set $\mathcal{S}$ consisting of the points $\vv{t}\in \sierp_{p,n}$ satisfying $A\vv{t} < \vv{u}$ is contained in the intersection of the feasible set of the linear program $\LP(A, \vv{u})$ with the Sierpi\'nski $p$-gasket.
-   Since this intersection is compact, so is the closure of $\mathcal{S}$, namely $\feas\fip_p(A,\vv{u})$.
-   Thus, $\fip_p(A,\vv{u})$ has a well-defined value.
+    The feasible set of $\fip_p(A, \vv{u})$ is contained in the feasible set of $\LP(A, \vv{u})$, and hence, is bounded.  Thus, $\feas \fip_p(A, \vv{u})$ is compact, and so
+\[ \val \fip_p(A, \vv{u}) : = \max \{ \norm{\vv{t}}: \vv{t} \in \feas \fip_p(A, \vv{u}) \} = \sup \{ \norm{\vv{t}} : \vv{t} \in \sierp_{p,n}, A \vv{t} < \vv{u} \} \] is a well-defined real number.  As usual, we define the optimal set of $\fip_p(A, \vv{u})$ to be the set $\opt \fip_p(A, \vv{u})$ of feasible points that obtain this maximum.
 %Moreover, there is exists an optimal point
 %$\vv{t} \in \feas \fip_p(A, \vv{u})$ such that $\norm{\vv{t}} = \val \fip_p(A, \vv{u})$.
 \end{remark}
 
 \begin{example} \label{ex: feas fip}
- Consider the fractal linear program $\fip_p(A, \vv{u})$, where
-\[ A = \begin{pmatrix}
+ Consider the fractal linear program $\fip_p = \fip_p(A, \vv{u})$, where
+\[ A = \begin{bmatrix}
  3&11\\ 11&2 \\ 5&10 \\ 2&0
- \end{pmatrix}
-\text{ and } \vv{u} = \begin{pmatrix} 1 \\ 1 \\ 1 \\ \end{pmatrix}.
+ \end{bmatrix}
+\text{ and } \vv{u} = \begin{bmatrix} 1 \\ 1 \\ 1 \\ \end{bmatrix}.
 \]
-\Cref{fig: feas fip} shows the feasible set for $\fip_p = \fip_p(A,\vv{u})$ in blue, the feasible set for $\LP = \LP(A,\vv{u})$ in gray, and the line of points with coordinate sum $\val \fip_p$ in green, for small values of $p$.
+
+
+\Cref{fig: feas fip} illustrates the key features of the program $\fip_p$ for small values of $p$.  The feasible set for $ \fip_p$ is displayed in blue, the feasible set for $\LP = \LP(A,\vv{u})$ in gray, and the line of points with coordinate sum equal to $\val \fip_p$ in green.  Thus,  $\opt \fip_p$ is simply the intersection of the blue points and green points.
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%START OF FIGURE DISPLAYING FRACTAL PROGRAM
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \begin{figure}
   \centering
 \begin{subfigure}{.49\textwidth}
 \centering
   \includegraphics[width=.9\textwidth]{Pictures/ex4_char2.pdf}\hskip .04\textwidth
-  \caption{
-     $
-     \begin{array}{l}
-       \opt \fip_2 = \conv\big(\big(\frac1{20},\frac3{40}\big),\big(\frac1{12},\frac1{24}\big)\big)\\[2mm]
-       \val \fip_2 = \frac18
-     \end{array}
-     $
-  }
+   \captionsetup{labelformat=empty}
+   \caption{$p=2$}
+  % \caption{
+  %    $
+  %    \begin{array}{l}
+  %      \opt \fip_2 = \conv\big(\big(\frac1{20},\frac3{40}\big),\big(\frac1{12},\frac1{24}\big)\big)\\[2mm]
+  %      \val \fip_2 = \frac18
+  %    \end{array}
+  %    $
+  % }
 \end{subfigure}
 \begin{subfigure}{.49\textwidth}
 \centering
 \includegraphics[width=.9\textwidth]{Pictures/ex4_char3.pdf}
-\caption{
-     $
-     \begin{array}{l}
-       \opt \fip_3 = \conv\big(\big(\frac1{36},\frac1{12}\big),\big(\frac7{81},\frac2{81}\big)\big)\\[2mm]
-       \val \fip_3 = \frac19
-     \end{array}
-     $
-}
+  \captionsetup{labelformat=empty}
+  \caption{$p=3$}
+% \caption{
+%      $
+%      \begin{array}{l}
+%        \opt \fip_3 = \conv\big(\big(\frac1{36},\frac1{12}\big),\big(\frac7{81},\frac2{81}\big)\big)\\[2mm]
+%        \val \fip_3 = \frac19
+%      \end{array}
+%      $
+% }
 \end{subfigure}
 
 \bigskip
@@ -656,57 +667,121 @@ Given a monomial pair $(A, \vv{u})$, the \emph{fractal linear program} $\fip_p(A
 \begin{subfigure}{.49\textwidth}
 \centering
   \includegraphics[width=.9\textwidth]{Pictures/ex4_char5.pdf}\hskip .04\textwidth
-  \caption{
-     $
-     \begin{array}{l}
-       \opt \fip_5 = \opt \LP = \big\{\big(\frac2{25}, \frac3{50}\big)\big\}\\[2mm]
-       \val \fip_5 = \frac7{50}
-     \end{array}
-     $
-  }
+  \captionsetup{labelformat=empty}
+  \caption{$p=5$}
+  % \caption{
+  %    $
+  %    \begin{array}{l}
+  %      \opt \fip_5 = \opt \LP = \big\{\big(\frac2{25}, \frac3{50}\big)\big\}\\[2mm]
+  %      \val \fip_5 = \frac7{50}
+  %    \end{array}
+  %    $
+  % }
 \end{subfigure}
 \begin{subfigure}{.49\textwidth}
 \centering
   \includegraphics[width=.9\textwidth]{Pictures/ex4_char7.pdf}
-  \caption{
-     $
-     \begin{array}{l}
-       \opt \fip_7 = \big\{\big(\frac{19}{245}, \frac3{49}\big)\big\}\\[2mm]
-       \val \fip_7 = \frac{34}{245}
-     \end{array}
-     $ }
+  \captionsetup{labelformat=empty}
+  \caption{$p=7$}
+  % \caption{
+  %    $
+  %    \begin{array}{l}
+  %      \opt \fip_7 = \big\{\big(\frac{19}{245}, \frac3{49}\big)\big\}\\[2mm]
+  %      \val \fip_7 = \frac{34}{245}
+  %    \end{array}
+  %    $ }
 \end{subfigure}
 \caption{The feasible and optimal sets of $\fip_p = \fip_p(A, \vv{u})$ for $A$ and $\vv{u}$ described in \Cref{ex: feas fip}, for small values of $p$}
 \label{fig: feas fip}
 \end{figure}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%END OF FIGURE DISPLAYING FRACTAL PROGRAM
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+\Cref{fig: feas fip details} provides a more precise description of these quantities. It is worth mentioning that when $p=5$, the optimal sets, and hence values, of $\fip_p$ and $P$ agree.  On the other hand, if $p=2,3,6$, then $\val \fip_p < \val P$.
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%START OF FIGURE DISPLAYING FRACTAL PROGRAM DATA
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+\begin{figure}
+\begin{center}
+\begingroup
+\setlength{\tabcolsep}{8pt} % Default value: 6pt
+\renewcommand{\arraystretch}{1.4} % Default value: 1
+\begin{tabular}{ | c | c | c |  } \hline
+$p$ & $\val \fip_p$ & $\opt \fip_p$  \\ \hline
+$2$ & $1/8$ & $\conv((1/20, 3/40),(1/12, 1/24))$ \\ \hline
+$3$ & $1/9$ & $\conv((1/36, 1/12),(7/81, 2/81))$ \\ \hline
+$5$ & $7/50$ & $\{(2/25, 3/50) \}$  \\ \hline
+$7$ & $34/245$ & $\{(19/245, 3/49) \}$ \\ \hline
+\end{tabular}
+\endgroup
+% The \begingroup ... \endgroup pair ensures the separation
+% parameters only affect this particular table, and not any
+% sebsequent ones in the document.
+\end{center}
+\caption{The value and optimal sets of $\fip_p = \fip_p(A, \vv{u})$ for $A$ and $\vv{u}$ described in \Cref{ex: feas fip}, for small values of $p$}
+\label{fig: feas fip details}
+\end{figure}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%END OF FIGURE DISPLAYING FRACTAL PROGRAM DATA
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
 \end{example}
 
+
+
+
+
+
+
+
+
+
+
+
+
+\newpage
+
 \begin{proposition}
-Given a monomial pair $(A, \vv{u})$, we have that
-\[\crit(A,\vv{u}) = \val\fip_p(A,\vv{u}).\]
+The value of $\fip_p(A,\vv{u})$ equals $\crit(\ideala, \ideald)$.
 \end{proposition}
 
 \begin{proof}
-For each $q=p^e$,  $\frac{1}{q}\cdot\feas\IP_p(A,\vv{u}, q)$ is contained in $\feas \fip_p(A,\vv{u})$, so
+If $e \in \NN$, then the constraints of $\IP_p(A, \vv{u}, p^e)$ imply that
+ % and $\vv{k} \in \feas \IP_p(A, \vv{u}, p^e)$, and set $\vv{h} = \vv{k}/p^e$.  The arithmetic constraint of $\IP_p(A, \vv{u}, p^e)$ guarantees that $\vv{h} \in \sierp_{p,n}$, while the linear constraint guarantees that $A \vv{h} < \vv{u}$.  That is, $\vv{h} \in \feas \fip_p(A, \vv{u})$.
+$p^{-e}  \feas \IP_p(A, \vv{u}, p^e)$ lies in $\feas \fip_p(A,\vv{u})$.  It then follows from this and \eqref{ft as limit of normalized program values: eq} that
+%
 \[
-\val\fip_p(A,\vv{u}) \ge \displaystyle \lim_{q\to \infty}\frac{\val\IP_p(A,\vv{u}, q)}{q} = \crit(A,\vv{u}).
+\val\fip_p(A,\vv{u}) \ge \displaystyle \lim_{e \to \infty}\frac{\val\IP_p(A,\vv{u}, p^e)}{p^e} = \crit(\ideala, \ideald).
  \]
-On the other hand, fix $\vv{t} \in \feas \LP(A, \vv{u}) \cap \sierp_{p,n}$, fix $q \geq 1$ a power of $p$, and a sequence $\{ \vv{t}_e \}_{e=1}^\infty$ in $\NN^n$, for which all $\norm{\vv{t}_e} < p$ and
-$\vv{t} = q \cdot \big( \frac{\vv{t}_1}{p} +\frac{\vv{t}_2}{p^2}+\cdots \big)$.  For $e \geq 1$, let
- $\vv{t}^\star_{p^e} = q \cdot \big( \frac{\vv{t}_1}{p} + \cdots + \frac{\vv{t}_e}{p^e}  \big)$, so that $p^e \cdot \vv{t}^\star_{p^e} \in \IP_p(A, \vv{u}, p^e)$ and $\val \IP_p(A, \vv{u}, p^e) \geq p^e \norm{\vv{t}^\star_{p^e}}$.
- Dividing by $p^e$ and taking limits, we find that
+
+Next, fix a point $\vv{t} \in \sierp_{p,n}$ with $A \vv{t} < \vv{u}$.  By definition of $\sierp_{p,n}$, we may fix an integer $s$, and a sequence $\{ \vv{t}_l \}_{l=s}^\infty$ in $\NN^n$ with $\norm{\vv{t}_l} < p$ for all $l \geq s$, such that
+$\vv{t} = \sum_{l=s}^{\infty} \frac{\vv{t}_l}{p^l}$.  For each integer $e \geq 1$, set
+$\vv{t}^\star_{p^e} = \sum_{l=s}^{e} \frac{\vv{t}_l}{p^l}$.
+
+We claim that $p^e  \vv{t}^\star_{p^e}$ is feasible for $\IP_p(A, \vv{u}, p^e)$.  To see why, first note that that \Cref{dickson: R} tells us that this point satisfies the arithmetic constraint of $\IP_p(A, \vv{u}, p^e)$.  Furthermore, $\vv{t}^{\star}_{p^e} \leq \vv{t}$, and so $A \vv{t}^{\star}_{p^e} \leq A \vv{t} < \vv{u}$, which demonstrates that $p^e \vv{t}^\star_{p^e}$ satisfies the linear constraints of $\IP_p(A, \vv{u}, p^e)$.
+
+Dividing by $p^e$ and taking limits, we find that
  \[
-\crit(A,\vv{u}) = \lim_{q\to \infty} \frac{\val \IP_p(A, \vv{u}, q)}{q} \geq \lim_{q \to \infty}   \norm{\vv{t}^\star_q} = \norm{\vv{t}}.
+\crit(\ideala, \ideald) = \lim_{e \to \infty} \frac{\val \IP_p(A, \vv{u}, p^e)}{p^e} \geq \lim_{e \to \infty}   \norm{\vv{t}^\star_{p^e}} = \norm{\vv{t}}.
  \]
-Finally, given $\vv{s} \in \feas \fip_p(A, \vv{u}, p)$, fix a sequence of points $\{ \vv{s}_e \}_{e=1}^\infty$ in $\feas \LP(A, \vv{u}) \cap \sierp_{p,n}$ that limit to $\vv{s}$. Since $\vv{t} \mapsto \norm{\vv{t}}$ defines a continuous function $\RR^n \to \RR$, we have that $\crit(A, \vv{u}) \geq \lim \limits_{e \to \infty} \norm{ \vv{s}_e } =  \norm{ \vv{s} }$.
-Now, since $\vv{s}$ is an arbitrary element of $\feas \fip_p(A, \vv{u}, p)$, we have that
-$\crit(A, \vv{u}) \geq \val \fip_p(A, \vv{u})$, and equality holds.
+
+We have just shown that the objective function $\vv{t} \mapsto \norm{\vv{t}}$ is at most $\crit(\ideala, \ideald)$ on the set $\{ \vv{t} \in \sierp_{p,n} : A \vv{t} < \vv{u} \}$, and so the same must be true on the closure of this set, which agrees with the feasible set of $\fip_p(A, \vv{u})$, by definition.  Restated,  $ \val \fip_p(A, \vv{u})$ is at most $\crit(\ideala,  \ideald)$, and so equality holds.
 \end{proof}
 
+\subsection{An outline}
+\daniel[inline]{I imagine placing an outline here that points out the steps we are going to take to solve all of these optimization problems.}
 
 \newpage
-\newpage
-\section{A new section}
+\section{Connections with Newton polyhedra}
 
 \daniel[inline]{With the new organization, we should think about where to talk about images.  I think it might be best to only mention them closer to when they are used.}
 
@@ -822,7 +897,7 @@ Algebraically, $\ft{A}{\vv{u}}$ is the $F$-threshold of $\ideala$ with respect t
 \end{proof}
 
 \begin{example}\label{ex: ft}
-   Let $A=\left(\begin{smallmatrix}5&3&4\\ 5&4&3\\ 2&8&5\end{smallmatrix}\right)$ and $\vv{u} = (1,1,1)$.
+   Let $A=\begin{bsmallmatrix}5&3&4\\ 5&4&3\\ 2&8&5\end{bsmallmatrix}$ and $\vv{u} = (1,1,1)$.
    The Newton polyhedron $\N$ of $A$ is shown in \Cref{fig: newton polyhedron}.
    \begin{figure}
    \centering
