--- a/aip.tex
+++ b/aip.tex
@@ -630,7 +630,9 @@ The \emph{fractal linear program} $\fip_p(A,\vv{u})$ consists of maximizing the 
 % The value of the problem, $\val \fip_p(A,\vv{u})$, is defined as the supremum of $\norm{\vv{t}}$ among all $\vv{t} \in \feas \fip_p(A, \vv{u})$.
 \end{definition}
 
-\pedro[inline]{Maybe add a remark saying that the closure in the above definition isn't simply \[ \{ \vv{t} \in \sierp_{p,n} : A \vv{t} \le \vv{u} \}.\]}
+\pedro[inline]{Maybe add a remark saying that the closure in the above definition isn't simply \[ \{ \vv{t} \in \sierp_{p,n} : A \vv{t} \le \vv{u} \}.\]
+\daniel[inline]{Sounds good.  Can you remember the example?  Was it $\langle x^2, y^2 \rangle$ and $\vv{u} = (1,1)$ in characteristic $2$?}
+}
 
 \begin{remark}
     The feasible set of $\fip_p(A, \vv{u})$ is contained in the feasible set of $\LP(A, \vv{u})$, and hence, is bounded.  Thus, $\feas \fip_p(A, \vv{u})$ is compact, and so
