--- a/aip.tex
+++ b/aip.tex
@@ -20,7 +20,7 @@
 \pedro[inline]{What if we use $m$ for the number of variables/rows, to free $d$ to be the preferred notation for denominators?}
 
 \newcommand{\CheckedBox}{\text{\rlap{$\checkmark$}}\Box}
-
+Test test
 \details[inline]{
 TO DO LIST:
 \begin{enumerate}
